welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: value && is not a member of Unit
	if (estFaceMur) { (gauche() && avance()) || (droite() && avance()) }	
                                    ^