welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	if (estFaceMur) { (gauche() && avance()) || (droite() && avance()) }	
}
